# datascience_student_environment

./: README.md  bootstrap.sh
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml  requirements.txt
